# chat-app

./: .bazelrc  .envrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  buf.yaml  go.mod  go.sum
backends/chat/client/: BUILD.bazel  main.go  main_test.go
backends/chat/server/: BUILD.bazel  main.go
backends/greet/client/: BUILD.bazel  main.go  main_test.go
backends/room/db/: BUILD.bazel  models.go  query.sql  query.sql.go  schema.sql
backends/user/db/: BUILD.bazel  models.go  query.sql  query.sql.go  schema.sql  sqlc.yaml
backends/user/db/migrations/: 00001_add_user_table.sql
backends/user/db/testdata/: README.md
backends/user/k8s/: 01-db.yaml
backends/user/rpc/: BUILD.bazel  handler.go  handler_test.go  main.go
backends/utils/postgres/: BUILD.bazel  postgres.go
backends/utils/testhelpers/: BUILD.bazel  container.go
protos/chat/v1/: BUILD.bazel  chat.proto  empty.go
protos/greet/v1/: BUILD.bazel
protos/room/v1/: BUILD.bazel  empty.go  room.proto
protos/user/v1/: BUILD.bazel  empty.go  user.proto
scripts/: create-k8s-cluster.sh
web/: package.json  pnpm-lock.yaml
