bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_buf", version = "0.5.2")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2")

# Remove this dep and use protoc from protobuf once https://github.com/bazel-contrib/bazel-gazelle/pull/2284 is merged.
bazel_dep(name = "rules_proto", version = "7.1.0")

# DO NOT update to 34.0-rc1 because it ships with a different protoc version,
# and break the build since we're using a slightly older version from rules_proto.
# This can only be updated after the above PR is merged, and we can remove dependency
# on rules_proto.
bazel_dep(name = "protobuf", version = "33.5")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")
go_sdk.nogo(nogo = "//:my_nogo")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# This module is only a dependency for //:my_nogo, not the Go code,
# so we can't include it in go.mod (otherwise, `go mod tidy` would
# remove it).
go_deps.module(
    path = "golang.org/x/tools",
    sum = "h1:uNgphsn75Tdz5Ji2q36v/nsFSfR/9BRFvqhGBaJGd5k=",
    version = "0.42.0",
)
use_repo(
    go_deps,
    "com_connectrpc_connect",
    "com_connectrpc_validate",
    "com_github_stretchr_testify",
    "org_golang_google_protobuf",
    "org_golang_x_tools",
)

# buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")

# # See https://buf.build/docs/build-systems/bazel#buf-dependencies
# buf.dependency(module = "buf.build/bufbuild/protovalidate:80ab13bee0bf4272b6161a72bf7034e0")

# # Allow references to labels under @buf_deps
# use_repo(buf, "buf_deps")
