load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "github.com/huyquanha/chat-app/backends/chat/client",
    visibility = ["//visibility:public"],
    deps = [
        "//protos/chat/v1:chat",
        "@com_connectrpc_connect//:connect",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "client_test",
    srcs = ["main_test.go"],
    embed = [":client_lib"],
    deps = ["@com_github_stretchr_testify//assert"],
)
