load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/huyquanha/chat-app/backends/chat/server",
    visibility = ["//visibility:public"],
    deps = [
        "//protos/chat/v1:chat",
        "@com_connectrpc_connect//:connect",
        "@com_connectrpc_validate//:validate",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
