load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "github.com/huyquanha/chat-app/backends/greet/client",
    visibility = ["//visibility:private"],
    deps = [
        "//protos/greet/v1:greet",
        "@com_connectrpc_connect//:connect",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)
