load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = [
        "db.go",
        "models.go",
        "query.sql.go",
    ],
    importpath = "github.com/huyquanha/chat-app/backends/user/db",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgconn",
        "@com_github_jackc_pgx_v5//pgtype",
    ],
)

filegroup(
    name = "testdata",
    srcs = [
        "schema.sql",
        # Uncomment this when there are actually .sql files to include.
        # "testdata/*.sql",
    ],
    visibility = ["//visibility:public"],
)
