load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "rpc_lib",
    srcs = [
        "handler.go",
        "main.go",
    ],
    importpath = "github.com/huyquanha/chat-app/backends/user/rpc",
    visibility = ["//visibility:public"],
    deps = [
        "//backends/user/db",
        "//backends/utils/postgres",
        "//protos/user/v1:user",
        "@com_connectrpc_connect//:connect",
        "@com_connectrpc_validate//:validate",
        "@com_github_google_uuid//:uuid",
        "@com_github_jackc_pgerrcode//:pgerrcode",
        "@com_github_jackc_pgx_v5//pgconn",
        "@com_github_jackc_pgx_v5//pgxpool",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

go_binary(
    name = "rpc",
    embed = [":rpc_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "rpc_test",
    srcs = ["handler_test.go"],
    data = ["//backends/user/db:testdata"],
    embed = [":rpc_lib"],
    tags = ["local"],
    deps = [
        "//backends/utils/testhelpers",
        "//protos/user/v1:user",
        "@com_connectrpc_connect//:connect",
        "@com_github_stretchr_testify//assert",
    ],
)
