load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "testhelpers",
    srcs = ["container.go"],
    importpath = "github.com/huyquanha/chat-app/backends/utils/testhelpers",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_github_testcontainers_testcontainers_go//:testcontainers-go",
        "@com_github_testcontainers_testcontainers_go//wait",
        "@com_github_testcontainers_testcontainers_go_modules_postgres//:postgres",
    ],
)
