load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "chatv1_proto",
    srcs = ["chat.proto"],
    strip_import_prefix = "/protos",
    visibility = ["//visibility:public"],
    deps = ["@protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "chatv1_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "//:connect_go_grpc_compiler",
    ],
    importpath = "github.com/huyquanha/chat-app/protos/chat/v1",
    proto = ":chatv1_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "chat",
    embed = [":chatv1_go_proto"],
    importpath = "github.com/huyquanha/chat-app/protos/chat/v1",
    visibility = ["//visibility:public"],
)

buf_lint_test(
    name = "chatv1_proto_lint",
    config = "//:buf.yaml",
    module = "protos",
    targets = [":chatv1_proto"],
)
