load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "user_v1_proto",
    srcs = ["user.proto"],
    strip_import_prefix = "/protos",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "user_v1_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "//:connect_go_grpc_compiler",
    ],
    importpath = "github.com/huyquanha/chat-app/protos/user/v1",
    proto = ":user_v1_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "user",
    embed = [":user_v1_go_proto"],
    importpath = "github.com/huyquanha/chat-app/protos/user/v1",
    visibility = ["//visibility:public"],
)

buf_lint_test(
    name = "user_v1_proto_lint",
    config = "//:buf.yaml",
    module = "protos",
    targets = [":user_v1_proto"],
)
